fix(InstallTabs): docs button to WCAG2 AA contrast

--- a/src/components/InstallTabs/InstallTabs.scss
+++ b/src/components/InstallTabs/InstallTabs.scss
@@ -96,7 +96,7 @@
     &__docs-button,
     &__docs-button:hover {
       border-radius: var(--space-04);
-      border: 1px solid var(--color-text-secondary);
+      border: 1px solid var(--black3);
       padding: var(--space-08) var(--space-16);
       position: absolute;
       bottom: 2rem;
@@ -104,7 +104,7 @@
       text-decoration: none;
       box-sizing: border-box;
       height: 4rem;
-      color: var(--color-text-secondary);
+      color: var(--black3);
       font-weight: var(--font-weight-semibold);
     }
   }
